--- a/sass/scss/_buttons.scss
+++ b/sass/scss/_buttons.scss
@@ -10,10 +10,10 @@
 
 .btn-primary {
     @extend %btn;
-    background-color: $primary-color;
+    @include set-background(lighten($primary-color, 10%));
 }
 
 .btn-secondary {
     @extend %btn;
-    background-color: $secondary-color;
+    @include set-background($secondary-color);
 }
