--- a/sass/scss/_config.scss
+++ b/sass/scss/_config.scss
@@ -3,4 +3,18 @@ $font-stack: Arial,
 Helvetica,
 sans-serif;
 $primary-color: #0e6cff;
+// $primary-color: #e0ffff;
 $secondary-color: #ff8700;
+@function set-text-color($color) {
+    @if(lightness($color) > 70) {
+        @return #333;
+    }
+    @else {
+        @return #fff;
+    }
+}
+
+@mixin set-background($color) {
+    background-color: $color;
+    color: set-text-color($color);
+}
